fix: remove overflow visible added for test

--- a/shelter/pages/main/styles/main.css
+++ b/shelter/pages/main/styles/main.css
@@ -517,7 +517,6 @@ html {
 
 .section {
   width: 100%;
-  overflow: visible;
 }
 .section__content {
   margin: 0 auto;
@@ -538,7 +537,6 @@ html {
   padding-top: 80px;
   padding-bottom: 100px;
   margin: 0 auto;
-  overflow: visible;
 }
 
 .transparent {
