--- a/shelter/shared/styles/_shared.scss
+++ b/shelter/shared/styles/_shared.scss
@@ -12,7 +12,6 @@ html {
 
 .section {
   width: 100%;
-  overflow: visible;
 
   &__content {
     margin: 0 auto;
@@ -40,7 +39,6 @@ html {
   padding-top: 80px;
   padding-bottom: 100px;
   margin: 0 auto;
-  overflow: visible;
 }
 
 .transparent {
